Fixed the planTrip frontend
* Added Logout functionality
* Tested both frontend and backend
